Al hacer clic en una categoria, se va a una nueva actividad Productos, que no hace nada por ahora. Refactor de los nombres.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="action_refresh" translatable="false">Refresh</string>
     <string name="hello_world"></string>
     <string name="title_activity_detail">Details</string>
+    <string name="title_activity_productos">Producto: </string>
 
 
 </resources>
